--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
-</html>
+</html><!-- Deploy test: Mon Dec 22 03:30:19 PM CET 2025 -->
